media/yubal/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yubal-route
spec:
  parentRefs:
  - name: cluster-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: https
    namespace: network
  hostnames:
  - "yubal.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: yubal-miguel
      port: 8000
      weight: 1
    matches:
    - headers:
      - name: x-auth-request-user
        type: Exact
        value: miguel
  - backendRefs:
    - group: ''
      kind: Service
      name: yubal-ari
      port: 8000
      weight: 1
    matches:
    - headers:
      - name: x-auth-request-user
        type: Exact
        value: ari
  - backendRefs:
    - group: ''
      kind: Service
      name: echo-test-svc
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
